@@ -45,6 +45,7 @@ def build(
     bitrate=None,
     audio_tracks=(),
     single_pass=False,
+    attachments="",
     **kwargs,
 ):
     filters = generate_filters(**kwargs)
@@ -89,6 +90,7 @@ def build(
         f"-sc_detection {sc_detection} "
         f'{f"-vf {filters}" if filters else ""} '
         "-map_metadata -1 "
+        f"{attachments} "
     )
 
     if not single_pass:
