@@ -13,6 +13,7 @@
 * Adding #68 version upgrade dialogue
 * Fixing taskbar does not always show icon
 * Fixing #55 GUI logs by splitting them from core logs
+* Fixing that mkv cover attachments would show as video tracks
 * Changing major internal re-write to keep encoding even if GUI dies
 * Changing bitrate suggestion resolutions to be more readable with fps
 * Changing command builders to specify the temporary files themselves
